first batch of updates to generators to handle the threading

--- a/lib/generators/multi_recipient_threaded_messages/scaffold/templates/view_index_inbox.html.erb
+++ b/lib/generators/multi_recipient_threaded_messages/scaffold/templates/view_index_inbox.html.erb
@@ -1,30 +1,30 @@
 <h2>Inbox</h2>
 <table>
 	<tr>
-		<th>Del?</th>
+		<th>Delete?</th>
 		<th>Sent</th>
 		<th>Sender</th>
-		<th>Sent</th>
+		<th>Sent at</th>
 	</tr>
-	<%% if @<%= message_plural_lower_case %>.size == 0 %>
+	<%% if @<%= message_thread_plural_lower_case %>.size == 0 %>
 		<tr>
 			<td colspan="4">
 				No messages
 			</td>
 		</tr>
 	<%% else %>
-		<%% for <%= message_singular_lower_case %> in @<%= message_plural_lower_case %> %>
+		<%% for <%= message_thread_singular_lower_case %> in @<%= message_thread_plural_lower_case %> %>
 			<tr>
-				<td><%%= check_box_tag "delete[]", <%= message_singular_lower_case %>.id %></td>
+				<td><%%= check_box_tag "delete[]", <%= message_thread_singular_lower_case %>.id %></td>
 				<td>
-					<%% if <%= message_singular_lower_case %>.read? %>
-					  <%%= link_to h(<%= message_singular_lower_case %>.subject), user_<%= message_singular_lower_case %>_path(@<%= user_singular_lower_case %>, <%= message_singular_lower_case %>) %>
+					<%% if <%= message_theard_singular_lower_case %>.read?(@current_user) %>
+					  <%%= link_to h(<%= message_thread_singular_lower_case %>.subject), user_<%= message_singular_lower_case %>_path(@<%= user_singular_lower_case %>, <%= message_thread_singular_lower_case %>) %>
 					<%% else %>
-					  <%%= link_to "#{h(<%= message_singular_lower_case %>.subject)} (unread)", user_<%= message_singular_lower_case %>_path(@<%= user_singular_lower_case %>, <%= message_singular_lower_case %>) %>
+					  <%%= link_to "#{h(<%= message_thread_singular_lower_case %>.subject)} (unread)", user_<%= message_singular_lower_case %>_path(@current_user, <%= message_thread_singular_lower_case %>) %>
 					<%% end %>
 				</td>
-				<td><%%= link_to h(<%= message_singular_lower_case %>.sender.login), user_path(@<%= user_singular_lower_case %>) %></td>
-		    <td><%%=h <%= message_singular_lower_case %>.created_at.to_s(:long) %></td>
+				<td><%%= link_to_user_profile <%= message_thread_singular_lower_case %>.last_sender %> %></td>
+		    <td><%%= <%= message_thread_singular_lower_case %>.last_message.created_at.to_s(:long) %></td>
 			</tr>
 		<%% end %>
 		<tr>
@@ -34,5 +34,5 @@
 		</tr>
 	<%% end %>
 </table>
-<%%= link_to "Sent", user_<%= message_plural_lower_case %>_path(@<%= user_singular_lower_case %>, :mailbox => :sent)%> |
-<%%= link_to "Compose", new_user_<%= message_singular_lower_case %>_path(@<%= user_singular_lower_case %>)%>
+<%%= link_to "Sent", user_<%= message_plural_lower_case %>_path(@current_user, :mailbox => :sent)%> |
+<%%= link_to "Compose", new_user_<%= message_singular_lower_case %>_path(@current_user)%>
