updating some of the templates after testing in an app and adding the correct forms for sending messas and replies

--- a/lib/generators/multi_recipient_threaded_messages/scaffold/templates/view_index.html.erb
+++ b/lib/generators/multi_recipient_threaded_messages/scaffold/templates/view_index.html.erb
@@ -1,4 +1,4 @@
-<%% form_tag delete_selected_user_<%= message_plural_lower_case %>_path(@current_user, :method => :post) do %>
+<%%= form_tag delete_selected_<%= user_singular_lower_case %>_<%= message_plural_lower_case %>_path(@current_user, :method => :post) do %>
 	<%% if params[:mailbox] == "sent" %>
 			<%%= render :partial => "sent" %>
 	<%% else %>
