--- a/lib/generators/multi_recipient_threaded_messages/scaffold/templates/view_index_sent.html.erb
+++ b/lib/generators/multi_recipient_threaded_messages/scaffold/templates/view_index_sent.html.erb
@@ -28,4 +28,4 @@
 		</tr>
  	<%% end %>
 </table>
-<%%= link_to "Inbox", user_<%= message_plural_lower_case %>_path(@current_user)%>
+<%%= link_to "Inbox", <%= user_singular_lower_case %>_<%= message_plural_lower_case %>_path(@current_user)%>
