--- a/lib/generators/multi_recipient_threaded_messages/scaffold/templates/view_show.html.erb
+++ b/lib/generators/multi_recipient_threaded_messages/scaffold/templates/view_show.html.erb
@@ -1,5 +1,5 @@
 <div id='messages-nav'>
-	<%%= link_to "Inbox", user_<%= message_plural_lower_case %>_path(@current_user)%>
+	<%%= link_to "Inbox", <%= user_singular_lower_case %>_<%= message_plural_lower_case %>_path(@current_user)%>
 </div>
 
 <div id='message-thread'>
@@ -23,7 +23,16 @@
 	
 	<div id='reply-box'>
 		<%% if @<%= message_thread_singular_lower_case %>.participants.include?(@current_user) %>
-			<!-- form_tag for reply ... -->
+			<%%= form_tag user_messages_path(@current_user) do %>
+			<%%= hidden_field_tag 'reply[thread_id]', @<%= message_thread_singular_lower_case %>.id %>
+			<p>
+				Reply:<br />
+				<%%= text_area_tag 'reply[body]' %>
+			</p>
+			<p>
+				<%%= submit_tag "Reply" %>
+			</p>
+			<%% end %>
 		<%% end %>
 	</div>
 </div>
